--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,9 @@ services:
     build: ./infra/php
     volumes:
       - ./src:/data
+    ports:
+      - 5173:5173
+
 
   web:
     image: nginx:1.20-alpine
@@ -18,6 +21,8 @@ services:
     build: ./infra/mysql
     volumes:
       - db-store:/var/lib/mysql
+    ports:
+      - 3306:3306
 
 volumes:
   db-store:
