--- a/src/package.json
+++ b/src/package.json
@@ -1,18 +1,30 @@
 {
     "private": true,
     "scripts": {
-        "dev": "npm run development",
-        "development": "mix",
-        "watch": "mix watch",
-        "watch-poll": "mix watch -- --watch-options-poll=1000",
-        "hot": "mix watch --hot",
-        "prod": "npm run production",
-        "production": "mix --production"
+        "dev": "vite",
+        "build": "vite build"
     },
     "devDependencies": {
+        "@babel/preset-react": "^7.22.15",
+        "@popperjs/core": "^2.11.6",
+        "@vitejs/plugin-react": "^2.2.0",
         "axios": "^0.25",
+        "bootstrap": "^5.2.3",
         "laravel-mix": "^6.0.6",
+        "laravel-vite-plugin": "^0.8.1",
         "lodash": "^4.17.19",
-        "postcss": "^8.1.14"
+        "postcss": "^8.1.14",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "sass": "^1.56.1"
+    },
+    "dependencies": {
+        "@emotion/react": "^11.11.1",
+        "@emotion/styled": "^11.11.0",
+        "@mui/material": "^5.14.17",
+        "localforage": "^1.10.0",
+        "match-sorter": "^6.3.1",
+        "react-router-dom": "^6.18.0",
+        "sort-by": "^1.2.0"
     }
 }
